--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -43,6 +43,13 @@
             android:layout_below="@+id/radioLunar"
             android:theme="@android:style/Theme.Light"
             />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="查询"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal" />
     </RadioGroup>
 
 
