--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,25 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/editText"
-        android:text="abccddd" />
+        android:text="" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/editText"
+        android:id="@+id/lauarText"
+        android:text="" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:background="@mipmap/stars_0001"
+        android:id="@+id/detail"
+        android:layout_gravity="center_horizontal" />
 
     <RadioGroup
         android:layout_width="fill_parent"
@@ -29,7 +47,7 @@
         android:orientation="vertical"
         android:id="@+id/radioCal"
         android:transitionGroup="false"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/lauarText"
         android:touchscreenBlocksFocus="false"
         >
         <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioCalendar" android:text="公历" android:checked="true"></RadioButton>
