--- a/app/src/main/res/layout/star_detail_main.xml
+++ b/app/src/main/res/layout/star_detail_main.xml
@@ -8,41 +8,41 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ccs.myandriod.StarDetailActivity"
     >
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="查询"
-        android:id="@+id/button2"
-        android:layout_gravity="center_horizontal" />
 
     <GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="left"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        android:rowCount="3"
+        android:columnCount="2"
+        android:id="@+id/ccsgridLayout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.example.ccs.myandriod.StarDetailActivity"
         >
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/editText2"
-            android:text="aaaaaaaaaaaaaaaaaaaa" />
+
 
 
     </GridLayout>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="特点：花心多变掌管宫位：第三宫阴阳性：阳性最大特征：思想主管星：水星颜色：黄色珠宝：猫眼石幸运号码：7金属：水银"
+        android:ems="10"
+        android:id="@+id/editText3"
+        tools:text="特点：花心多变掌管宫位：第三宫阴阳性：阳性最大特征：思想主管星：水星颜色：黄色珠宝：猫眼石幸运号码：7金属：水银" />
 
 
 </LinearLayout>
