--- a/app/src/main/res/layout/star_detail_main.xml
+++ b/app/src/main/res/layout/star_detail_main.xml
@@ -30,19 +30,33 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.example.ccs.myandriod.StarDetailActivity"
         >
-
-
-
     </GridLayout>
 
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/detailText"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.example.ccs.myandriod.StarDetailActivity"
+        >
     <EditText
         android:layout_width="match_parent"
+        android:padding="1dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="特点：花心多变掌管宫位：第三宫阴阳性：阳性最大特征：思想主管星：水星颜色：黄色珠宝：猫眼石幸运号码：7金属：水银"
+        android:text="Html.fromHtmlaaaaaaaaaaaaaaaaaaaaa"
         android:ems="10"
+        android:layout_weight="1"
         android:id="@+id/editText3"
-        tools:text="特点：花心多变掌管宫位：第三宫阴阳性：阳性最大特征：思想主管星：水星颜色：黄色珠宝：猫眼石幸运号码：7金属：水银" />
-
+        tools:text="" />
+    </LinearLayout>
 
 </LinearLayout>
