--- a/app/src/main/res/layout/star_detail_main.xml
+++ b/app/src/main/res/layout/star_detail_main.xml
@@ -13,50 +13,48 @@
     tools:context="com.example.ccs.myandriod.StarDetailActivity"
     >
 
-    <GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical"
-        android:rowCount="3"
-        android:columnCount="2"
-        android:id="@+id/ccsgridLayout"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.example.ccs.myandriod.StarDetailActivity"
-        >
-    </GridLayout>
+        <GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical"
+            android:rowCount="5"
+            android:columnCount="2"
+            android:id="@+id/ccsgridLayout"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context="com.example.ccs.myandriod.StarDetailActivity"
+            >
+        </GridLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            >
+            <TextView
+                android:padding="1dp"
+                android:layout_height="fill_parent"
+                android:layout_width="0dp"
+                android:inputType="textPersonName"
+                android:text=""
+                android:enabled="false"
+                android:ems="10"
+                android:layout_weight="1"
+                android:scrollbars="vertical"
+                android:lines="2"
+                android:maxLines="5"
+                android:id="@+id/starDetail"
+                tools:text="" />
+        </LinearLayout>
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
 
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/detailText"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.example.ccs.myandriod.StarDetailActivity"
-        >
-    <EditText
-        android:layout_width="match_parent"
-        android:padding="1dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Html.fromHtmlaaaaaaaaaaaaaaaaaaaaa"
-        android:ems="10"
-        android:layout_weight="1"
-        android:id="@+id/editText3"
-        tools:text="" />
-    </LinearLayout>
 
 </LinearLayout>
