--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,59 @@
     tools:context="com.example.ccs.myandriod.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:rowCount="1"
+        android:columnCount="3"
+        android:id="@+id/gridLayout"
+        >
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:id="@+id/radioCal"
+        android:transitionGroup="false"
+        android:layout_column="0"
+        android:touchscreenBlocksFocus="false"
+
+        >
+        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioCalendar" android:text="公历" android:checked="true"></RadioButton>
+        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioLunar" android:text="农历"></RadioButton>
+
+    </RadioGroup>
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePicker"
+        android:layout_gravity="center"
+        android:calendarViewShown="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/datePicker"
+        android:text="查询"
+        android:id="@+id/button"
+         />
+
+    </GridLayout>
+
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rowCount="1"
+        android:columnCount="2"
+        android:id="@+id/gridLayout2"
+        android:layout_below="@+id/gridLayout"
+        >
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,56 +72,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/editText"
-        android:text="" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/editText"
-        android:id="@+id/lauarText"
+        android:layout_column="0"
         android:text="" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:background="@mipmap/stars_0001"
         android:id="@+id/detail"
+        android:layout_column="1"
         android:layout_gravity="center_horizontal" />
-
-    <RadioGroup
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:orientation="vertical"
-        android:id="@+id/radioCal"
-        android:transitionGroup="false"
-        android:layout_below="@+id/lauarText"
-        android:touchscreenBlocksFocus="false"
-        >
-        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioCalendar" android:text="公历" android:checked="true"></RadioButton>
-        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioLunar" android:text="农历"></RadioButton>
-
-        <DatePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/datePicker"
-            android:layout_gravity="center"
-            android:layout_below="@+id/radioLunar"
-            android:theme="@android:style/Theme.Light"
-            />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="查询"
-            android:id="@+id/button"
-            android:layout_gravity="center_horizontal" />
-    </RadioGroup>
+    </GridLayout>
 
 
 </RelativeLayout>
