--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,23 +18,8 @@
         android:rowCount="1"
         android:columnCount="3"
         android:id="@+id/gridLayout"
-        >
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:orientation="vertical"
-        android:id="@+id/radioCal"
-        android:transitionGroup="false"
-        android:layout_column="0"
-        android:touchscreenBlocksFocus="false"
 
         >
-        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioCalendar" android:text="公历" android:checked="true"></RadioButton>
-        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioLunar" android:text="农历"></RadioButton>
-
-    </RadioGroup>
 
     <DatePicker
         android:layout_width="wrap_content"
@@ -42,6 +27,7 @@
         android:id="@+id/datePicker"
         android:layout_gravity="center"
         android:calendarViewShown="false"
+        android:layout_column="0"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         />
@@ -50,8 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/datePicker"
+        android:layout_column="1"
         android:text="查询"
         android:id="@+id/button"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
          />
 
     </GridLayout>
