--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,72 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ccs.myandriod.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:rowCount="1"
-        android:columnCount="3"
         android:id="@+id/gridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/blue"
+        android:columnCount="1"
+        android:rowCount="3">
 
-        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:background="@color/titlebgcolor"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePicker"
-        android:layout_gravity="center"
-        android:calendarViewShown="false"
-        android:layout_column="0"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        />
+            <Button
+                android:id="@+id/detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="center_horizontal"
+                android:background="@mipmap/stars_0001" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/datePicker"
-        android:layout_column="1"
-        android:text="查询"
-        android:id="@+id/button"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-         />
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_row="0"
+                android:text="双鱼座\n(1月30日-2月30日)" />
+        </LinearLayout>
 
-    </GridLayout>
+        <LinearLayout>
 
+            <GridLayout
+                android:id="@+id/ccsgridLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:rowCount="5">
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:rowCount="1"
-        android:columnCount="2"
-        android:id="@+id/gridLayout2"
-        android:layout_below="@+id/gridLayout"
-        >
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/editText"
-        android:layout_column="0"
-        android:text="" />
+            </GridLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@mipmap/stars_0001"
-        android:id="@+id/detail"
-        android:layout_column="1"
-        android:layout_gravity="center_horizontal" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/starDetail"
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:enabled="false"
+                    android:inputType="textPersonName"
+                    android:lines="2"
+                    android:maxLines="5"
+                    android:padding="1dp"
+                    android:scrollbars="vertical"
+                    android:text=""
+                    tools:text="" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout>
+
+        </LinearLayout>
     </GridLayout>
 
 
