--- a/app/src/main/res/layout/star_detail_main.xml
+++ b/app/src/main/res/layout/star_detail_main.xml
@@ -26,33 +26,13 @@
             android:orientation="vertical"
             android:rowCount="5"
             android:columnCount="2"
-            android:id="@+id/ccsgridLayout"
+            android:id="@+id/ccsgridLayout2"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context="com.example.ccs.myandriod.StarDetailActivity"
             >
         </GridLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            >
-            <TextView
-                android:padding="1dp"
-                android:layout_height="fill_parent"
-                android:layout_width="0dp"
-                android:inputType="textPersonName"
-                android:text=""
-                android:enabled="false"
-                android:ems="10"
-                android:layout_weight="1"
-                android:scrollbars="vertical"
-                android:lines="2"
-                android:maxLines="5"
-                android:id="@+id/starDetail"
-                tools:text="" />
-        </LinearLayout>
+
 
 
 
