--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ccs.star.app.com.ccs.ccs.myandriod.MainActivity"
+    tools:context="com.ccs.star.app.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <GridLayout
